# ESGvist-Dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  mockup-collection-task-first.html  mockup-evidence-usage.html  mockup-v2-data.html  mockup-v2.html  mockup-v3.html  mockup.html  sitemap.html  sitemap_v3.html  start
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/app/: __init__.py  config.py  main.py
apps/api/tests/: AUDIT_TESTS_NOTE.md  FIXTURES_REQUIRED.md  __init__.py  conftest.py  test_autosave.py
backend/: Dockerfile  alembic.ini  gunicorn.conf.py  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20260324_01_add_runtime_tables.py  20260324_02_refresh_sessions.py  20260324_03_hash_refresh_tokens.py  20260325_01_boundary_default_invariant.py  20260325_02_completeness_binding_uniqueness.py  20260325_03_support_session_unique_active.py  20260325_04_role_binding_scope_uniqueness.py  20260325_05_pending_invitation_uniqueness.py  20260325_06_finalize_hashed_refresh_tokens.py  20260325_07_add_framework_admin_role.py  20260325_08_drop_project_boundary_snapshot_fk.py  20260415_01_layered_catalog_foundation.py  20260415_02_notification_context_metadata.py  20260417_01_custom_datasheets_foundation.py  20260418_01_entity_default_owners.py  20260418_02_data_point_dimension_and_mapping_invariants.py  20260418_03_requirement_evidence_project_scope.py  b8cf0807fad2_add_missing_columns_and_tables.py
backend/app/: main.py
backend/app/core/: access.py  ai_cache.py  assignment_sla.py  config.py  (+14 more)
backend/scripts/: apply_bp_proxy_collection_status_mix.py  db_schema.py  dump_postgres_snapshot.py  export_gri_catalog_summary.py  import_bp_esg_datasheet_xlsx.py  import_esrs2_xlsx.py  import_esrs_xlsx.py  import_gri_2_pdf.py  import_gri_3_pdf.py  import_gri_docx.py  import_gri_sectoral_docx.py  import_sasb_pdf.py  import_uae_climate_law_docx.py  populate_demo_collection.py  reset_demo_project_catalog.py  schema_smoke.py  seed_bp_proxy_framework_examples.py  seed_demo_env.py  split_gri_leaf_standards.py  start_playwright_guided_backend.sh
backend/tests/: conftest.py  test_ai_tools.py  test_architecture.py  test_assignment_matrix.py  test_audit_api.py  test_auth.py  test_boundary_memberships.py  test_completeness.py  test_completeness_events.py  test_config_safety.py  test_custom_datasheets.py  test_dashboard.py  test_data_points.py  test_deltas_ai.py  test_entities.py  test_export_jobs.py  test_form_configs.py  test_full_coverage.py  test_gaps.py  test_gates.py  test_health.py  test_job_runner.py  test_mappings.py  test_merge.py  test_notifications.py  test_observability.py  test_org_users.py  test_platform_hardening.py  test_projects.py  test_requirement_items.py  test_reuse.py  test_review_export.py  test_review_queue.py  test_runtime_events.py  test_schema_runtime.py  test_security_hardening.py  test_shared_elements.py  test_sla_service.py  test_sso.py  test_standards.py  (+2 more)
(+894 files in other folders)
